crates/config/src/snapshots/config__appearance_document__tests__an_appearance_patch_writes_only_the_fields_it_sets@key_hints.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
[window]
key_hints = false
