crates/config/src/snapshots/config__appearance_document__tests__appearance_patched_writes@animations_off.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
[window]
animations = false
