crates/config/src/snapshots/config__appearance_document__tests__appearance_patched_writes@empty_patch.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
# sifr-ui.toml
[cover]
# the noir look
style = "vinyl"
brackets = false

[card]
format_chips = true
speed_chip = "always"
