crates/config/src/snapshots/config__appearance_document__tests__appearance_patched_writes@every_field_text.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
# sifr-ui.toml
[cover]
# the noir look
style = "milkdrop"
brackets = true

[card]
format_chips = true
speed_chip = "always"

[progress]
remaining = true

[window]
key_hints = false
animations = false

[layout]
mode = "compact"
