crates/config/src/snapshots/config__appearance_document__tests__appearance_patched_writes@minimal_sections.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
[cover]
style = "off"

[card]
format_chips = true
