crates/config/src/snapshots/config__appearance_document__tests__appearance_patched_writes@one_field.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
# sifr-ui.toml
[cover]
# the noir look
style = "vinyl"
brackets = true

[card]
format_chips = true
speed_chip = "always"
